<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="?attr/colorPrimary"
    android:padding="16dp">

    <!-- Imagen de usuario -->
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/user_image"
        app:tint="@color/white" />

    <!-- Nombre del Usuario -->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_user_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <!-- Rol del Usuario -->
    <TextView
        android:id="@+id/tvUserRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_user_role"
        android:textColor="@color/white"
        android:textSize="14sp"/>
</LinearLayout>
