<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- Campo de usuario -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="407dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:drawableStart="@drawable/ic_user"
        android:textColor="@color/black"
        android:drawablePadding="8dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:autofillHints="username"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo de email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColor="@color/black"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername" />

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="408dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <!-- Spinner para roles -->
    <Spinner
        android:id="@+id/spinnerRoles"
        android:layout_width="406dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:entries="@array/roles_array"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <!-- Botón de registro -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerRoles"/>

    <!-- Enlace a inicio de sesión -->
    <TextView
        android:id="@+id/tvLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_login_text"
        android:textColor="@color/greenDark"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
